syntax = "proto3";

package echo;

service EchoService {
  // Simple unary method
  rpc Echo(EchoRequest) returns (EchoResponse) {}

  // Server streaming method
  rpc EchoStream(EchoRequest) returns (stream EchoResponse) {}

  // Client streaming method
  rpc EchoCollect(stream EchoRequest) returns (EchoResponse) {}

  // Bidirectional streaming method
  rpc EchoBidirectional(stream EchoRequest) returns (stream EchoResponse) {}
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
  int32 count = 2;
}
